--- a/css/home-style.css
+++ b/css/home-style.css
@@ -1,17 +1,20 @@
 body,
 p,
+ul,
+li,
+a,
+figcaption {	
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+}
 h1,
 h2,
 h3,
 h4,
 h5,
-h6,
-ul,
-li,
-a,
-figcaption {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 400;
+h6{
+	font-family: 'Playfair Display', serif;   
+    font-weight: 700;
 }
 .crema{background-color:#f4f4f4;}
 .nata{background-color:#eadca6;}
